# 42cursus

./: gitadd
born2beroot/: signature.txt
prueba/minitalk_clion/: CMakeLists.txt  Makefile  backup_server.c  client  client.c  client_bonus  client_bonus.c  compile  libft  main.c  server  server.c  server_bonus  server_bonus.c
prueba/minitalk_clion/client.dSYM/Contents/Resources/DWARF/: client
prueba/next_line/clion/: CMakeLists.txt  text.txt
prueba/next_line_clion/: CMakeLists.txt  compile  get_main.c  get_next_line.c  get_next_line.h  get_next_line_utils.c  log.txt  small_text.txt  text.txt
prueba/next_line_clion/bakup/: get_next_line.c  get_next_line.h  get_next_line_utils.c
prueba/printf_clion/: CMakeLists.txt  Makefile  compile  ft_printf.c  ft_printf.h  ft_printf_charutils.c  ft_printf_hexutils.c  ft_printf_intutils.c  ft_putnbr_u_fd.c  ftprintf  libft  main.c
prueba/push_swap_clion/: CMakeLists.txt  Makefile  ft_sort_max.c  ft_sort_mid.c  ft_sort_mid_bakup1.c  ft_sort_min.c  linux.sh  mac.sh  main_test.c  push_swap  push_swap.c  push_swap.h  push_swap_operators.c  push_swap_utils.c  push_swap_utils_math.c
prueba/push_swap_clion/push_swap.dSYM/Contents/Resources/DWARF/: push_swap
prueba/push_swap_clion/push_swap_visualizer/build_42/: CMakeCache.txt  Makefile  cmake_install.cmake  imgui.ini
prueba/push_swap_clion/push_swap_visualizer/build_42/dependencies/: Makefile  cmake_install.cmake
prueba/push_swap_clion/push_swap_visualizer/build_42/dependencies/catch2/: Makefile  cmake_install.cmake
prueba/push_swap_clion/push_swap_visualizer/build_42/dependencies/imgui-sfml/: Makefile  cmake_install.cmake
prueba/push_swap_clion/push_swap_visualizer/build_42/dependencies/sfml/: Makefile  cmake_install.cmake
prueba/push_swap_clion/push_swap_visualizer/build_42/src/: Makefile  cmake_install.cmake
prueba/push_swap_clion/push_swap_visualizer/build_42/tests/: Makefile  cmake_install.cmake
prueba/push_swap_clion/push_swap_visualizer/build_home/: CMakeCache.txt  CMakeCache.txt.bak  Makefile  cmake_install.cmake  imgui.ini
prueba/push_swap_clion/push_swap_visualizer/build_home/dependencies/: Makefile  cmake_install.cmake
prueba/push_swap_clion/push_swap_visualizer/build_home/dependencies/catch2/: Makefile  cmake_install.cmake
prueba/push_swap_clion/push_swap_visualizer/build_home/dependencies/imgui-sfml/: Makefile  cmake_install.cmake
prueba/push_swap_clion/push_swap_visualizer/build_home/dependencies/sfml/: Makefile  cmake_install.cmake
prueba/push_swap_clion/push_swap_visualizer/build_home/src/: Makefile  cmake_install.cmake
prueba/push_swap_clion/push_swap_visualizer/build_home/tests/: Makefile  cmake_install.cmake
(+358 files in other folders)
